--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,6 @@ cache:
 
 php:
  - 5.6
- - 7.0
-
-matrix:
- allow_failures:
-  - php: 7.0
 
 env:
  matrix:
@@ -28,11 +23,24 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=pgsql MOODLE_BRANCH-master
   - DB=mysqli MOODLE_BRANCH=MOODLE_26_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+  - DB=mysqli MOODLE_BRANCH=master
+
+matrix:
+  include:
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 7.0
+      env: DB=pgsql MOODLE_BRANCH=master
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -47,11 +55,11 @@ install:
 script:
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
-# - moodle-plugin-ci phpmd
+  - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-# - moodle-plugin-ci csslint    # No CSS
+  - moodle-plugin-ci csslint    # No CSS
   - moodle-plugin-ci shifter
-# - moodle-plugin-ci jshint     # No JS
+  - moodle-plugin-ci jshint     # No JS
   - moodle-plugin-ci phpunit
-# - moodle-plugin-ci behat      # No tests yet
+  - moodle-plugin-ci behat      # No tests yet
 
