--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_28_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_30_STABLE
-  - DB=pgsql MOODLE_BRANCH-master
+  - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=MOODLE_27_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_28_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
