--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 
 language: php
 
-notifications:
-  email:
-    recipients:
-    - marcus@boon.mx
-
 sudo: false
 
 cache:
@@ -23,15 +18,17 @@ php:
 
 env:
  matrix:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
   - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_38_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_39_STABLE
   - DB=mysqli MOODLE_BRANCH=master
 
 matrix:
@@ -44,12 +41,11 @@ matrix:
 before_install:
   - phpenv config-rm xdebug.ini
   - cd ../..
-  - composer selfupdate
-  - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3;
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci install
+  - moodle-plugin-ci install -vvv
 
 script:
   - moodle-plugin-ci phplint
@@ -61,4 +57,3 @@ script:
   - moodle-plugin-ci jshint     # No JS
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat      # No tests yet
-
