--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,10 @@ env:
 
 matrix:
   include:
-    - php: 5.6
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
-    - php: 5.6
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=master
+    - php: 7.4
+      env: DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -52,8 +52,5 @@ script:
   - moodle-plugin-ci phpcpd
   # - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-  - moodle-plugin-ci csslint    # No CSS
-  - moodle-plugin-ci shifter
-  - moodle-plugin-ci jshint     # No JS
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat      # No tests yet
